[package]
name = "puppet-fmt"
version = "0.1.2"
edition = "2021"
description = "Automatic code formatter for puppet manifests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acrn/puppet-fmt"

[dependencies]
anyhow = "1.0"
argh = "0.1"
rustc-hash = "2.1"
tempfile = "3.16"
tree-sitter = "0.24"
tree-sitter-puppet = "1.3"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
