[package]
name = "puppet-fmt"
version = "0.2.0"
authors = ["Anders Oskarsen <anders.oskarsen@sunet.se>"]
edition = "2021"
description = "Automatic code formatter for puppet manifests"
license = "BSD-2-Clause"
repository = "https://github.com/acrn/puppet-fmt"

[dependencies]
anyhow = "1.0"
argh = "0.1"
rustc-hash = "2.1"
tempfile = "3.16"
tree-sitter = "0.25"
tree-sitter-puppet = { git = "https://github.com/smoeding/tree-sitter-puppet", tag = "v2.2.0" }

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
